@@ -5,12 +5,10 @@ import okhttp3.Cookie;
 import okhttp3.CookieJar;
 import okhttp3.HttpUrl;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 
 /**
  * A {@link CookieJar} that delegates to multiple cookie jars.
@@ -21,9 +19,7 @@ public class NestedCookieJar implements CookieJar {
     private final List<CookieJar> cookieJars;
 
     public NestedCookieJar(List<CookieJar> cookieJars) {
-        this.cookieJars = cookieJars == null
-                ? Collections.emptyList()
-                : Collections.unmodifiableList(new ArrayList<>(cookieJars));
+        this.cookieJars = cookieJars == null ? Collections.emptyList() : List.copyOf(cookieJars);
     }
 
     @Override
@@ -64,41 +60,12 @@ public class NestedCookieJar implements CookieJar {
         if (cookieMap.isEmpty()) {
             return Collections.emptyList();
         }
-        return Collections.unmodifiableList(new ArrayList<>(cookieMap.values()));
+        return List.copyOf(cookieMap.values());
     }
 
-    private static final class CookieKey {
-        private final String name;
-        private final String domain;
-        private final String path;
-
-        private CookieKey(String name, String domain, String path) {
-            this.name = name;
-            this.domain = domain;
-            this.path = path;
-        }
-
+    private record CookieKey(String name, String domain, String path) {
         private static CookieKey from(Cookie cookie) {
             return new CookieKey(cookie.name(), cookie.domain(), cookie.path());
-        }
-
-        @Override
-        public boolean equals(Object object) {
-            if (this == object) {
-                return true;
-            }
-            if (!(object instanceof CookieKey)) {
-                return false;
-            }
-            CookieKey cookieKey = (CookieKey) object;
-            return Objects.equals(name, cookieKey.name)
-                    && Objects.equals(domain, cookieKey.domain)
-                    && Objects.equals(path, cookieKey.path);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(name, domain, path);
         }
     }
 }
